Fix IR framework tests